Changelog
=========


2.1.2 (unreleased)
------------------

- Performance improvements:

  - Store the title from the mail subject on the object, so that
    we don't have to read the message for retreiving the title on access.

  [jone]

- Make sure only a *default* value will be set for IMailSettings.mail_domain,
  but an existing value won't be overwritten when running the upgrade step twice.
  [lgraf]


2.1.1 (2014-05-12)
------------------

- Fix From-/To-/Cc-Header encoding problem with Apple Mail.
  [jone]

- Made primary field also for dexterity-1 installations working.
  [phgross]

- Added French translation by I. Anthenien.
  [lknoepfel]

2.1.0 (2014-03-28)
------------------

- Remove "validate_sender" configuration setting.
  We always require the sender to be valid.
  [jone]

- Refactor inbound view so that customization and error-handling
  is easier possible.
  [jone]

- Improve searchable text to index attachments recursively.
  [jone]

- Added registry entry 'mail_domain' in upgrade step to 2000.
  [lknoepfel]

- Fix tests for Plone 4.1.x - 4.2.x by using a compatible ftw.workspace
  version.
  [mathias.leimgruber]


2.0 (2013-10-21)
----------------

- Make mail tab date parsing robust.
  [jone]

- Disable sorting in mail tab for header information columns.
  Sorting header informations does currently not work because
  the information is not in the catalog.
  When doing it outside the catalog we could run into performance
  issues when we have many mails, therefore we disable it for now.
  [jone]

- Use plone default classes for table styling.
  [Julian Infanger]

- Fixed response content-type in inbound view.
  [lknoepfel]

- Revoke "ftw.mail: Add Mail" permission.
  This permission makes the "mail" type show up in the add menu.
  Only admins (Manager) should be able to add new mails through the
  add menu, the normal use case is sending the mails via inbound.
  Also change the lawgiver hint to ingnore this permission.
  [jone]
